trunk/Archive2/9b/1b112f03b4053a/output
main.cpp:5:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:14:22: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i<k.size(); i++)
                      ^
main.cpp:22:10: error: 'i' was not declared in this scope
     for (i = 0; i<k.size(); i++)
          ^
main.cpp:31:15: error: cannot convert 'std::vector<_Tp, _Alloc>::empty<int, std::allocator<int> >' from type 'bool (std::vector<int>::)() const noexcept' to type 'bool'
     if(k.empty)
               ^
